--- a/src/Component/About/About.css
+++ b/src/Component/About/About.css
@@ -12,3 +12,9 @@
     font-weight: 700;
     margin-bottom: 20px;
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .about{
+        margin-top: 20px;
+    }
+}
