--- a/src/Component/Header/Navbar.css
+++ b/src/Component/Header/Navbar.css
@@ -1,7 +1,8 @@
 .nav-link{
     margin-right: 10px !important;
-    color: black !important;
-    font-size: 20px !important;
+    color: #ffffff !important;
+    font-size: 18px !important;
+
 }
 .log{
     background-color: #0046c0 !important;
@@ -11,4 +12,14 @@
 .navbar-brand{
     color: #0046c0 !important;
     font-weight: 700;
+}
+.bg-color{
+    background-color: #20bdd1;
+}
+
+.navbar-toggler {
+    margin: 0 auto;
+}
+.carousel-indicators{
+    display: none;
 }
