--- a/src/Component/Seevice/Service.css
+++ b/src/Component/Seevice/Service.css
@@ -3,7 +3,7 @@
     margin-bottom: 60px;
 }
 .service-form{
-    background-color:#0843aa;
+    background-color:#20bdd1;
     border: 1px solid #ddd;
     padding: 10px;
     border-radius: 5px;
