--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -9,7 +9,7 @@
 .feature{
     width:100%;
     height:60vh;
-    background-color:#0843aa;
+    background-color:#20bdd1;
     opacity: 0.9;
     color:white;
 }
