--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -3,7 +3,7 @@
     width: 350px;
     /* margin-top: auto;
     margin-bottom: auto; */
-    background: #0843aa;
+    background: #20bdd1;
     position: relative;
     display: flex;
     justify-content: center;
