--- a/src/Component/GetAppointment/AppointmentBanner.css
+++ b/src/Component/GetAppointment/AppointmentBanner.css
@@ -8,8 +8,8 @@
 .appointment-feature{
     width:100%;
     height:60vh;
-    background-color:#0046c0;
-    opacity: 0.7;
+    background-color:#20bdd1;
+    opacity: 0.5;
     
 }
 .title{
