--- a/src/Component/Header/Banner.css
+++ b/src/Component/Header/Banner.css
@@ -23,7 +23,14 @@
 @media only screen and (max-width: 600px){
   
     .carousel-caption {
-        bottom: 0% !important;
+        top: 30% !important;
+        right: 20% !important;
+    } 
+}
+@media only screen and (max-width: 1100px){
+  
+    .carousel-caption {
+        top: 35% !important;
         right: 20% !important;
     } 
 }
